# ploston-cli

./: .coverage  .gitignore  .pre-commit-config.yaml  Makefile  PUBLISHING.md  README.md  coverage.xml  junit-unit-3.12.xml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  rebuild.yml  release.yml
src/ploston_cli/: __init__.py  __main__.py  application.py  capabilities.py  client.py  completion.py  config.py  decorators.py  formatters.py  main.py  utils.py
src/ploston_cli/bootstrap/: __init__.py  asset_manager.py  bootstrap_log.py  builder.py  compose.py  grafana_cleanup.py  health.py  image_resolver.py  integration.py  k8s.py  network.py  prerequisites.py  stack.py  state.py  workspace.py
src/ploston_cli/bridge/: __init__.py  errors.py  health.py  lifecycle.py  proxy.py  server.py  stream.py
src/ploston_cli/commands/: bootstrap.py  bridge.py  init.py  inject.py  inspector.py  server.py
src/ploston_cli/init/: __init__.py  backup.py  detector.py  env_manager.py  injector.py  selector.py  target_selector.py
src/ploston_cli/inspector/: __init__.py  build_css.sh  daemon.py  events.py  models.py  proxy.py  run.py  server.py  tailwind.config.js
src/ploston_cli/runner/: __init__.py  auth.py  availability.py  command.py  connection.py  daemon.py  executor.py  health_server.py  heartbeat.py  proxy.py  types.py
src/ploston_cli/shared/: __init__.py  atomic.py  auth.py  daemon.py  logging.py  paths.py  proctitle.py
tests/: conftest.py
tests/e2e/: __init__.py  mock_agent.py  test_bootstrap.sh  test_init_import.sh
tests/fixtures/: __init__.py  scenario-config.yaml
tests/fixtures/mock_mcp/: Dockerfile  __init__.py  responses.json  server.py
tests/fixtures/workflows/: __init__.py  cross-server-deploy.yaml  echo-test.yaml  failing-workflow.yaml  invalid-missing-steps.yaml  multi-step.yaml  python-transform.yaml  scrape-and-save.yaml  simple-linear.yaml
tests/integration/: test_bootstrap_integration.py  test_cli_commands.py  test_cli_server_commands.py  test_error_scenarios.py  test_init_command.py  test_user_journeys.py
tests/integration/bridge/: test_resilience.py  test_streaming.py  test_transport.py
tests/integration/runner/: conftest.py  test_runner_with_mock_cp.py
tests/mocks/: __init__.py  mock_rest_server.py
tests/scenarios/: __init__.py  conftest.py  test_agent_bridge.py  test_config_reload.py  test_init_import.py  test_multi_mcp.py  test_observability.py  test_onboarding.py  test_runner_lifecycle.py  test_tool_discovery.py  test_workflow_authoring.py  test_workflow_execution.py
tests/unit/: test_adapter_backup_contract.py  test_atomic_write.py  test_backup.py  test_bootstrap_assets.py  test_bootstrap_compose.py  test_bootstrap_health.py  test_bootstrap_images.py  test_bootstrap_k8s.py  test_bootstrap_prerequisites.py  test_bootstrap_rollback.py  test_bootstrap_stack.py  test_bootstrap_state.py  test_client_spec.py  test_completion.py  test_composite_adapter.py  test_config_show.py  test_context_servers_shape.py  test_env_manager_perms.py  test_grafana_cleanup.py  test_init_detector.py  test_init_env_manager.py  test_init_injector.py  test_init_partial_failure.py  test_inject_command.py  test_inject_data_loss.py  test_injection_adapters.py  test_injection_targets.py  test_inspector_command.py  test_network_timeouts.py  test_runner_auto_start.py  test_runner_commands.py  test_serve_startup.py  test_server_command.py  test_target_selector.py  test_toml_format.py  test_tools_list.py  test_validate.py  test_workflows_show.py
tests/unit/bootstrap/: test_dashboard_chain_detection.py  test_dashboard_consistency.py  test_dashboard_session_inspector.py
tests/unit/bridge/: test_errors.py  test_expose_filter.py  test_expose_flag.py  (+7 more)
(+75 files in other folders)
