[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ploston-cli"
version = "1.0.0"
description = "Unified CLI for Ploston - Bridge, Runner, and Management Commands"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Ostan Labs", email = "hello@ostanlabs.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ploston-core>=1.3.0",
    "click>=8.1.0",
    "httpx>=0.26.0",
    "httpx-sse>=0.4.0",
    "mcp>=1.20.0",
    "questionary>=2.0.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
    "websockets>=12.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    # Test server dependencies
    "fastapi>=0.115.0",
    "pydantic>=2.10.0",
    "uvicorn>=0.34.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
ploston = "ploston_cli.main:main"

[project.urls]
Homepage = "https://github.com/ostanlabs/ploston-cli"
Documentation = "https://ostanlabs.netlify.app"
Repository = "https://github.com/ostanlabs/ploston-cli"

[tool.hatch.build.targets.wheel]
packages = ["src/ploston_cli"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "bridge: marks tests as bridge tests",
    "bridge_unit: marks tests as bridge unit tests",
    "bridge_integration: marks tests as bridge integration tests",
    "bridge_e2e: marks tests as bridge e2e tests",
    "runner: marks tests as runner tests",
    "runner_unit: marks tests as runner unit tests",
    "runner_integration: marks tests as runner integration tests",
    "cli: marks tests as CLI management command tests",
    "cli_unit: marks tests as CLI unit tests",
    "scenario: marks tests as scenario-based tests (user journey validation)",
    "docker: marks tests requiring Docker Compose environment (Layer 2)",
]
